exports[`Sidebar component should be displayed correctly in providers view 1`] = `
<Sidebar>
  <Nav>
    <NavItem>
      <NavLink
        activeClassName="is-active"
        ariaCurrent="true"
        className="c-nav-link"
        to="/connected">
        <NavIcon
          icon="test-file-stub" />
        <NavText>
          Connected accounts
        </NavText>
      </NavLink>
    </NavItem>
    <NavItem>
      <NavLink
        activeClassName="is-active"
        ariaCurrent="true"
        className="c-nav-link is-active"
        to="/providers/all">
        <NavIcon
          icon="test-file-stub" />
        <NavText>
          Providers
        </NavText>
      </NavLink>
    </NavItem>
    <ul
      className="col-nav-submenu">
      <li>
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="col-nav-submenu-link"
          to="/providers/all">
          All
        </NavLink>
      </li>
      <li>
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="col-nav-submenu-link"
          to="/providers/isp">
          ISP
        </NavLink>
      </li>
      <li>
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="col-nav-submenu-link"
          to="/providers/telecom">
          Telecom
        </NavLink>
      </li>
      <li>
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="col-nav-submenu-link"
          to="/providers/others">
          Others
        </NavLink>
      </li>
    </ul>
  </Nav>
</Sidebar>
`;

exports[`Sidebar component should be displayed correctly in root view 1`] = `
<Sidebar>
  <Nav>
    <NavItem>
      <NavLink
        activeClassName="is-active"
        ariaCurrent="true"
        className="c-nav-link"
        to="/connected">
        <NavIcon
          icon="test-file-stub" />
        <NavText>
          Connected accounts
        </NavText>
      </NavLink>
    </NavItem>
    <NavItem>
      <NavLink
        activeClassName="is-active"
        ariaCurrent="true"
        className="c-nav-link"
        to="/providers/all">
        <NavIcon
          icon="test-file-stub" />
        <NavText>
          Providers
        </NavText>
      </NavLink>
    </NavItem>
  </Nav>
</Sidebar>
`;
